# ChangeLog for xfce-extra/xfce4-power-manager
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 Nov 2008; Christoph Mende <angelos@gentoo.org>
  xfce4-power-manager-0.6.0_rc1.ebuild, xfce4-power-manager-9999.ebuild:
  Moved XFCE_CONFIG to pkg_setup

  09 Nov 2008; Christoph Mende <angelos@gentoo.org>
  xfce4-power-manager-0.6.0_rc1.ebuild:
  Set XFCE_VERSION for proper dependencies

  07 Nov 2008; Christoph Mende <angelos@gentoo.org>
  xfce4-power-manager-0.6.0_rc1.ebuild:
  Remove S as it's now set in the eclass

  06 Nov 2008; Christoph Mende <angelos@gentoo.org>
  +xfce4-power-manager-0.6.0_rc1.ebuild:
  Initial non-live ebuild

  06 Nov 2008; Christoph Mende <angelos@gentoo.org>
  +xfce4-power-manager-9999.ebuild:
  Initial import
