@@ -1,15 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
+DIST xfce4-power-manager-0.6.0.tar.bz2 419859 RMD160 b0ad5f6019810d3c90ecab61ac1f67ecd6dfdcfd SHA1 c730f8f23e984fed42c33bc83050dbd34dd6258c SHA256 92981ed3dad6ca21ca390595b2d12b61a248d0bc5880744904f192b209aba3e2
 DIST xfce4-power-manager-0.6.0RC1.tar.bz2 370981 RMD160 48c86aef5c9d70851599ba4376d9f23b31acba34 SHA1 2f0eb5ca84dbc38c772daee5fe3c6185189444a8 SHA256 9f7f98e83de13a388de54ac8d1d309a49228a71fb3ba22fbbe368a156da26985
+EBUILD xfce4-power-manager-0.6.0.ebuild 605 RMD160 229103f7f3516bd5fa6f340e7a72333fde33057a SHA1 eec6282cc92b01fec37c7398010a3d9da7221a0a SHA256 73263817c694c2037108dcdc554873b5842e04dc27be7a89ee998b085acfab96
 EBUILD xfce4-power-manager-0.6.0_rc1.ebuild 624 RMD160 c5443eb5f8da28d26db418b9cef1ef82d42d36a7 SHA1 0abb1c0efd7c618003b9b642ab88274023f40dc1 SHA256 834749ad094a63f6d8e6a5bc7557e0ee2f27a5300b6b42fbd6d26de4e9f4b476
 EBUILD xfce4-power-manager-9999.ebuild 584 RMD160 a007d2aabf5624f055c2919db1357ce956d043d0 SHA1 852e79f5220a17f9eb77d7272f450a72c176ba80 SHA256 d4ac795901f1a62934a931feea50bd50b611ca832516e6f2cf4afcc3de24cf82
-MISC ChangeLog 786 RMD160 0124aa937b40aee93619a604e052cf5c1399af78 SHA1 3755bb3bcbd7f4e68412d5f8137b8c76a5561ca0 SHA256 ea5f532f412a394691f2f75b75d754026740d718023b24be5362e496cc33fa30
+MISC ChangeLog 933 RMD160 f96e882ce22ed6b363aea72d012d4409af27aff5 SHA1 35b372bfa4d140cf47c5ce72eb23b37d0450ab17 SHA256 861945e2f937f68035f70a796198016cc580fe0d7b47e23edc514852bff9178c
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkluEYkACgkQKhnDs22gwa/KpQCdGKNE09cm2qi0hjiO/iXaiLXQ
-S6AAoKAYKdDkOWR2PGDFmbgu8SBsFIbR
-=DxAu
+iEYEARECAAYFAkl91l4ACgkQKhnDs22gwa9WKgCfRYRTZEFNo06zQqbP/L1bNML+
+uU4Anis5PXr8M9T3YcM6+GggKEKF9Nq8
+=wDqe
 -----END PGP SIGNATURE-----
