@@ -1,6 +1,12 @@
 # ChangeLog for xfce-extra/xfce4-power-manager
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*xfce4-power-manager-0.6.0 (26 Jan 2009)
+
+  26 Jan 2009; Christoph Mende <angelos@gentoo.org>
+  +xfce4-power-manager-0.6.0.ebuild:
+  Version bump
 
   17 Nov 2008; Christoph Mende <angelos@gentoo.org>
   xfce4-power-manager-0.6.0_rc1.ebuild, xfce4-power-manager-9999.ebuild:
